# manga-localizer-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_LICENSES.md  README.md  SECURITY.md  pyproject.toml  start-windows.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DESIGN_CONTRACT.md  PARITY_LEDGER.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.2.md  RELEASE_NOTES_0.4.3.md  RELEASE_NOTES_0.4.4.md  RELEASE_NOTES_0.4.5.md  VERIFICATION.md
docs/benchmarks/: V0.5_FULL_BOOK_REPORT.md
docs/design/: mockup.css  mockup.html
scripts/: audit_ocr_transcript.py  audit_transcript.py  benchmark_hybrid_ocr.py  benchmark_visual_sfx.py  bootstrap.ps1  bootstrap.sh  build_readme_comparisons.py  inspect_crop_audit.py  render_benchmark_transcript.py  start.sh  verify_output.py
src/manga_localizer/: __init__.py  api.py  cli.py  config.py  inpainting.py  jobs.py  model_manager.py  name_dictionary.py  ocr.py  pipeline.py  renderer.py  sfx.py  translator.py
src/manga_localizer/web/: app.css  app.js  i18n.js  index.html
tests/: test_api.py  test_bootstrap_contract.py  test_cli.py  test_config.py  test_inpainting.py  test_models.py  test_name_dictionary.py  test_ocr.py  test_pipeline.py  test_renderer.py  test_translator.py  test_web_contract.py
